Revision history for MooseX-AlwaysCoerce

0.05  2010-07-13 00:05:10
    - support types without coercion (Schwern)

0.04  2010-03-06 05:28:01
    - remove t/00-load.t (was failing)

0.03  2009-06-16 17:50:12
    - make coerce => 0 work for class_has

0.02  2009-06-16 17:23:29
    - rewritten using metaroles, the Moose way

0.01  2009-06-15 22:18:34
    - releasing...