@@ -1,5 +1,7 @@
 Revision history for MooseX-AlwaysCoerce
 
+    - Use modern Moose APIs, to avoid warnings with Moose 1.09 (Karen Etheridge)
+
 0.05  2010-07-13 00:05:10
     - support types without coercion (Schwern)
 
